OY-5157 hae hyväksynnän ehdot myös jonoittain sijoitteluun siirrettyjä jonoja varten