@@ -88,6 +88,7 @@ public class ValintalaskennanTulosExcelTest {
     XSSFWorkbook workbook =
         ValintalaskennanTulosExcel.luoExcel(
             Collections.emptyMap(),
+            Collections.emptyMap(),
             haku,
             hakukohde,
             Collections.singletonList(tarjoaja),
@@ -115,8 +116,11 @@ public class ValintalaskennanTulosExcelTest {
   public void sheetContents() {
     XSSFWorkbook workbook =
         ValintalaskennanTulosExcel.luoExcel(
-            Collections.singletonMap(
-                "Hakemus 1", new HyvaksynnanEhto("ltt", "ehto 1", "villkor 1", "condition 1")),
+            Map.of(),
+            Map.of(
+                "jonoOid1",
+                Map.of(
+                    "Hakemus 1", new HyvaksynnanEhto("ltt", "ehto 1", "villkor 1", "condition 1"))),
             haku,
             hakukohde,
             Collections.singletonList(tarjoaja),
@@ -183,9 +187,12 @@ public class ValintalaskennanTulosExcelTest {
   public void ataruSheetContents() {
     XSSFWorkbook ataruWorkbook =
         ValintalaskennanTulosExcel.luoExcel(
-            Collections.singletonMap(
-                "1.2.246.562.11.00000000000000000063",
-                new HyvaksynnanEhto("ltt", "ehto 1", "villkor 1", "condition 1")),
+            Map.of(),
+            Map.of(
+                "jonoOid1",
+                Map.of(
+                    "1.2.246.562.11.00000000000000000063",
+                    new HyvaksynnanEhto("ltt", "ehto 1", "villkor 1", "condition 1"))),
             haku,
             hakukohde,
             Collections.singletonList(tarjoaja),
@@ -254,6 +261,7 @@ public class ValintalaskennanTulosExcelTest {
   public void sarakkeidenSisaltoOnOikeinVaikkaSeTulisiEriJarjestyksessaEriHakijoille() {
     XSSFWorkbook ataruWorkbook =
         ValintalaskennanTulosExcel.luoExcel(
+            Collections.emptyMap(),
             Collections.emptyMap(),
             haku,
             hakukohde,
@@ -340,6 +348,7 @@ public class ValintalaskennanTulosExcelTest {
     XSSFWorkbook workbook =
         ValintalaskennanTulosExcel.luoExcel(
             Collections.emptyMap(),
+            Collections.emptyMap(),
             haku,
             hakukohde,
             Collections.singletonList(tarjoaja),
@@ -412,6 +421,7 @@ public class ValintalaskennanTulosExcelTest {
         () ->
             ValintalaskennanTulosExcel.luoExcel(
                 Collections.emptyMap(),
+                Collections.emptyMap(),
                 haku,
                 hakukohde,
                 Collections.singletonList(tarjoaja),
@@ -433,6 +443,7 @@ public class ValintalaskennanTulosExcelTest {
   public void generoiTiedosto() throws IOException {
     XSSFWorkbook workbook =
         ValintalaskennanTulosExcel.luoExcel(
+            Collections.emptyMap(),
             Collections.emptyMap(),
             haku,
             hakukohde,
